--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,7 @@ button {
 }
 
 .rating {
-    display: inline-block;
+    
     margin-right: 10px;
     color: white;
 }
@@ -50,5 +50,6 @@ button {
 }
 
 img {
-    display: inline-block;
+    
+    float: left;
 }
