--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
 }
 .jumbotron {
-    width: 90%;
+    
     background-color: black;
     /* background-color: lightseagreen; */
     color: white;
@@ -21,11 +21,6 @@ body {
     background-color: #5912b6;
     border-radius: 0;
     border: none;
-}
-
-img {
-    margin-bottom: 20px;
-    margin-right: 20px;
 }
 
 button {
@@ -49,7 +44,8 @@ button {
     padding: 0px;
 }
 
-img {
-    
-    float: left;
-}
+
+
+table, th, td {
+    color: white;
+  }
